kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1 # Corrigido para a API version correta
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard # O Dashboard está neste namespace
spec:
  entryPoints:
    - websecure # Usar a porta 443 (HTTPS)
  routes:
    - match: Host(`kube.local.dev`)
      kind: Rule
      services:
        - name: kubernetes-dashboard # Nome do Service do Dashboard
          port: 443 # Porta que o Service do Dashboard expõe (HTTPS)
  tls: {} # O Traefik do Docker Desktop irá gerar um certificado auto-assinado
